--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@wordpress/icons": "^9.2.0",
     "classnames": "^2.3.1",
     "dom-scroll-into-view": "^2.0.1",
+    "hex-rgba": "^1.0.2",
+    "react-lazy-load": "^4.0.1",
     "react-owl-carousel": "^2.3.3",
-    "styled-jsx": "^5.0.2"
+    "styled-jsx": "^5.0.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@wordpress/scripts": "23.3.0"
