--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hex-rgba": "^1.0.2",
     "react-lazy-load": "^4.0.1",
     "react-owl-carousel": "^2.3.3",
+    "react-select": "^5.8.0",
     "styled-jsx": "^5.0.2",
     "uuid": "^10.0.0"
   },
