--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-lazy-load": "^4.0.1",
     "react-owl-carousel": "^2.3.3",
     "react-select": "^5.8.0",
+    "react-sortable-hoc": "^2.0.0",
     "styled-jsx": "^5.0.2",
     "uuid": "^10.0.0"
   },
